syntax = "proto3";

package v1.nfpb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/nfpb;nfpbv1";

message Studio {
  int32                     studioID   = 1;
  string                    studioName = 2;
  google.protobuf.Timestamp createdAt  = 3;
}